--- a/android/quest/src/mpower-mcgovern/assets/configs/app/registers/household_register_config.json
+++ b/android/quest/src/mpower-mcgovern/assets/configs/app/registers/household_register_config.json
@@ -105,6 +105,13 @@
   "registerCard": {
     "rules": [
       {
+        "name": "activeConditions",
+        "condition": "true",
+        "actions": [
+          "data.put('activeConditions', service.filterResources(Condition, \"Condition.clinicalStatus.coding.code = 'active'\"))"
+        ]
+      },
+      {
         "name": "familyLogicalId",
         "condition": "true",
         "actions": [
@@ -173,7 +180,7 @@
         "name": "serviceMemberIcons",
         "condition": "true",
         "actions": [
-          "data.put('serviceMemberIcons', StringUtils:join([service.mapResourcesToLabeledCSV(Patient, \"Patient.active and (Patient.birthDate >= today() - 5 'years')\", 'CHILD'), service.mapResourcesToLabeledCSV(Condition, \"Condition.code.text = 'Pregnant'\", 'PREGNANT_WOMAN')], ','))"
+          "data.put('serviceMemberIcons', StringUtils:join([service.mapResourcesToLabeledCSV(Patient, \"Patient.active and (Patient.birthDate >= today() - 5 'years')\", 'CHILD'), service.mapResourcesToLabeledCSV(data.get('activeConditions'), \"Condition.code.text = 'Pregnant'\", 'PREGNANT_WOMAN'), service.mapResourcesToLabeledCSV(data.get('activeConditions'), \"Condition.code.text = 'PNC'\", 'BABY_MOTHER')], ','))"
         ]
       },
       {
