--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -27,10 +27,10 @@ espresso-core = "3.5.0"
 fhir-common-utils = "0.0.10-SNAPSHOT"
 fhir-engine = "0.1.0-beta03-preview9.5-SNAPSHOT"
 foundation = "1.3.1"
-fragment-ktx = "1.5.5"
+fragment-ktx = "1.6.1"
 fragment-testing = "1.5.2"
-glide = "4.13.0"
-gson = "2.9.1"
+glide = "4.14.2"
+gson = "2.10.1"
 hilt-android = "2.45"
 hilt-android-compiler = "2.45"
 hilt-android-testing = "2.45"
@@ -39,7 +39,7 @@ hilt-navigation-compose = "1.0.0"
 hilt-work = "1.0.0"
 jjwt = "0.9.1"
 joda-time = "2.10.14"
-json = "20220320"
+json = "20230618"
 junit = "1.1.3"
 junit-jupiter-api = "5.8.2"
 junit-jupiter-engine = "5.8.2"
@@ -61,10 +61,10 @@ lifecycle-livedata-ktx = "2.6.1"
 lifecycle-viewmodel-compose = "2.6.1"
 lifecycle-viewmodel-ktx = "2.6.1"
 mapbox-sdk-turf = "4.8.0"
-material = "1.7.0"
-material-icons-core = "1.3.1"
-material-icons-extended = "1.3.1"
-material3 = "1.0.1"
+material = "1.9.0"
+material-icons-core = "1.5.0"
+material-icons-extended = "1.5.0"
+material3 = "1.1.1"
 mockk = "1.12.3"
 mockk-android = "1.12.3"
 msg-simple = "1.2"
@@ -76,19 +76,19 @@ okhttp = "4.10.0"
 okhttp-logging-interceptor = "4.10.0"
 orchestrator = "1.4.2"
 p2p-lib = "0.6.6-SNAPSHOT"
-paging-compose = "1.0.0-alpha17"
-paging-runtime-ktx = "3.1.1"
-preference-ktx = "1.2.0"
+paging-compose = "3.2.0"
+paging-runtime-ktx = "3.2.0"
+preference-ktx = "1.2.1"
 prettytime = "5.0.2.Final"
 retrofit = "2.9.0"
 retrofit-mock = "2.9.0"
 retrofit2-kotlinx-serialization-converter = "0.8.0"
 robolectric = "4.7.3"
-runner = "1.3.0"
-runtime-livedata = "1.3.2"
-security-crypto = "1.1.0-alpha04"
+runner = "1.5.2"
+runtime-livedata = "1.5.0"
+security-crypto = "1.1.0-alpha06"
 slf4j-nop = "1.7.36"
-stax-api = "1.0"
+stax-api = "1.0-2"
 timber = "5.0.1"
 ui = "1.4.3"
 ui-test-junit4 = "1.4.3"
