Fix failing test
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/engine/src/main/AndroidManifest.xml
+++ b/android/engine/src/main/AndroidManifest.xml
@@ -25,5 +25,6 @@
                 android:value="androidx.startup"
                 tools:node="remove" />
         </provider>
+        <activity android:name=".util.test.HiltActivityForTest" />
     </application>
 </manifest>
