--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -67,12 +67,6 @@ jobs:
           disable-animations: false
           script: echo "Generated AVD snapshot for caching."
 
-      - name: Start SSH session
-        uses: luchihoratiu/debug-via-ssh@main
-        with:
-          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-          SSH_PASS: ${{ secrets.SSH_PASS }}
-
       - name: Run instrumentation tests manually
         uses: reactivecircus/android-emulator-runner@v2
         with: 
@@ -86,10 +80,4 @@ jobs:
 
       - name: Check performance results
         working-directory: android
-        run: ./gradlew :quest:evaluatePerformanceBenchmarkResults --stacktrace && ./gradlew :macrobenchmark:evaluatePerformanceBenchmarkResults --stacktrace || true && sleep 10800
-
-      - name: Start SSH session
-        uses: luchihoratiu/debug-via-ssh@main
-        with:
-          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-          SSH_PASS: ${{ secrets.SSH_PASS }}
+        run: ./gradlew :quest:evaluatePerformanceBenchmarkResults --stacktrace
