Benchmark tests for view generation and config generation (#2677)
* Draft: Commit

* Daft commit: Run tests i CI

* code cleanup

* Remove other CI tasks

* Fix performance tests assertion

* Fix performance tests assertion

* Fix performance tests assertion

* Allow SSH debugging

* Rerun SSH debugging

* Breakdown performance testing steps

* Breakdown performance testing steps

* Breakdown performance testing steps

* Breakdown performance testing steps

* Fix instrumentation running

* Fix instrumentation running

* Fix instrumentation running

* Fix instrumentation running

* Fix instrumentation running

* Fix apk install sequence

* List files in the sdcard/Download folder

* Enable JSON output for performance test results

* Enable JSON output for performance test results

* Fix instrumentation running

* Fix instrumentation running

* Fix instrumentation running

* Fix instrumentation running

* Fix instrumentation running

* Fix instrumentation running

* Update performance tests github workflow

- Revert github workflow for CI
- Revert household register page size to 20

* Run quest instrumentation tests before fhircoreJacocoReport task

* Clean up gradle files & performance results evaluation task

* Update the expected performance numbers for HouseholdRegister tests

* Refactor evaluatePerformanceBenchmarkResults

* Add compressed and zipped resources.db for performance testing

* Update performance-tests workflow to extract resources.db

* Ignore the resources.db in quest/androidTest

* Reformat and clean code

* Add macrobenchmark module with benchmark tests

* Add quest:benchmark buildType

* Add macrobenchmark/.gitignore

* Add macrobenchmark tests to performance tests CI check

- Some changes in line endings

* Add macrobenchmark tests to performance CI workflow

* Fix multiline command in perfomance tests workflow

- Fix failing quest build

* Add extra log

--- a/android/quest/src/main/AndroidManifest.xml
+++ b/android/quest/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:windowSoftInputMode="adjustResize"
         tools:ignore="UnusedAttribute,LockedOrientationActivity"
         tools:replace="android:theme">
+        <profileable
+            android:shell="true"
+            tools:targetApi="29" />
 
         <meta-data
             android:name="io.sentry.auto-init"
@@ -34,7 +37,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
@@ -76,7 +78,6 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
             android:exported="false"
-
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
