--- a/android/quest/src/mpower-mcgovern/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/mpower-mcgovern/assets/configs/app/profiles/default_profile_config.json
@@ -314,20 +314,6 @@
       ]
     },
     {
-      "name": "patientMaritalStatus",
-      "condition": "true",
-      "actions": [
-        "data.put('patientMaritalStatus', service.extractMaritalStatus(Patient))"
-      ]
-    },
-    {
-      "name": "isMarried",
-      "condition": "true",
-      "actions": [
-        "data.put('isMarried', data.get('patientMaritalStatus') == 'M')"
-      ]
-    },
-    {
       "name": "patientDOB",
       "condition": "true",
       "actions": [
@@ -339,6 +325,13 @@
       "condition": "true",
       "actions": [
         "data.put('isChild', fhirPath.extractValue(Patient, \"Patient.active and (Patient.birthDate >= today() - 5 'years')\"))"
+      ]
+    },
+    {
+      "name": "isMarried",
+      "condition": "true",
+      "actions": [
+        "data.put('isMarried', fhirPath.extractValue(Patient, \"Patient.active and Patient.maritalStatus.coding[0].code = 'M'\"))"
       ]
     },
     {
@@ -1232,50 +1225,6 @@
             "resourceIdentifier": "@{patientId}",
             "planDefinitions": [
               "5593"
-            ],
-            "refreshContent": true,
-            "eventWorkflows": [
-              {
-                "eventType": "RESOURCE_CLOSURE",
-                "eventResources": [
-                  {
-                    "id": "fpConditionToBeClosed",
-                    "resource": "Condition",
-                    "configRules": [
-                      {
-                        "name": "patientId",
-                        "condition": "true",
-                        "actions": [
-                          "data.put('patientId', fhirPath.extractValue(Patient, 'Patient.id'))"
-                        ]
-                      }
-                    ],
-                    "dataQueries": [
-                      {
-                        "paramName": "code",
-                        "filterCriteria": [
-                          {
-                            "dataType": "CODEABLECONCEPT",
-                            "value": {
-                              "system": "http://snomed.info/sct",
-                              "code": "99998888"
-                            }
-                          }
-                        ]
-                      },
-                      {
-                        "paramName": "subject",
-                        "filterCriteria": [
-                          {
-                            "dataType": "REFERENCE",
-                            "computedRule": "patientId"
-                          }
-                        ]
-                      }
-                    ]
-                  }
-                ]
-              }
             ]
           },
           "params": [
